<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleLibroFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            tools:text="@string/lbltitulo" />

        <EditText
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblAutor" />

        <EditText
            android:id="@+id/autor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblIsbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblIsbn" />

        <EditText
            android:id="@+id/isbn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblGenero" />

        <EditText
            android:id="@+id/genero"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblNumeroDisponible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNumeroDisponibles" />

        <EditText
            android:id="@+id/numero_disponible"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblNumeroOcupado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblNumeroOcupados" />

        <EditText
            android:id="@+id/numero_ocupado"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Editar" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Eliminar" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>